Fixed line spacing for event info

--- a/app/styles.css
+++ b/app/styles.css
@@ -113,7 +113,7 @@ body {
 }
 
 .eventInfo p {
-  line-height: 12px;
+  margin: 5px 0;
 }
 
 .infoLabel {
